# TeamSmartQueue

./: .gitignore  README.md  requirements.txt
Project/backend/: README.md  pyproject.toml  reset_password.py
Project/backend/app/: __init__.py
Project/backend/chroma_db/: chroma.sqlite3
Project/backend/tests/: test_question_agent_guardrails.py  test_security.py  (+1 more)
Video/: video_link.md
backend/: .env.example  pyproject.toml  ticket_auditor.db
backend/app/: main.py
backend/app/agents/: __init__.py  audit_agent.py  question_agent.py  rewrite_agent.py  supervisor_agent.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  health.py  tickets.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/database/: __init__.py  models.py
backend/app/mcp/: __init__.py  server.py
backend/app/schemas/: ticket.py  user.py
backend/app/services/: __init__.py  ai_service.py  duplicate_service.py  gemini_service.py  github_service.py
backend/chroma_db/: chroma.sqlite3
backend/tests/: test_question_agent_guardrails.py  test_supervisor_langgraph.py
docs/: ai-usage-note.md  architecture.md  assumptions-limitations.md  requirements-audit.md
document/: ai-development-usage-note.md  assumptions-limitations.md  requirements-audit.md  workflow.md
frontend/: index.html
frontend/src/: App.jsx  index.css
sample-data/expected-outputs/: completed-response.json  needs-clarification-response.json
sample-data/sample-inputs/: ticket-complete.json  ticket-needs-clarification.json
(+23 files in other folders)
